--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,56 @@
-body{
-    margin: 0px;
-    padding: 0px;
-}
-
-h1{
-    margin-top: 0px;
-    margin-left: 10px;
-    padding: 0px;
-}
-
-.headerp{
-    margin-left: 20px;
-}
-
-.headeracc{
-    font-family: fantasy;
-    background-color: #CE93D8;
-    height: 100px;
+.navigation {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
     
-}
-
-.m-link{
-    text-align: right;
-}
-
-.m-nav{
+    list-style: none;
+    margin: 0; 
+    background: deepskyblue;
+  }
+  
+  .navigation a {
     text-decoration: none;
-    color: #ffff;
-    float: right;
-    margin-top: 35px;
-    margin-right: 20px;
-    text-transform: uppercase;
-    
+    display: block;
+    padding: 1em;
+    color: white;
+  }
+  
+  .navigation a:hover {
+    background: #1565C0;
+  }
+  
+  @media all and (max-width: 800px) {
+    .navigation {
+      justify-content: space-around;
+    }
+  }
+  
+  @media all and (max-width: 600px) {
+    .navigation {
+      flex-flow: column wrap;
+      padding: 0;
+    }
+    .navigation a { 
+      text-align: center; 
+      padding: 10px;
+      border-top: 1px solid rgba(255, 255, 255,0.3); 
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
+    }
+    .navigation li:last-of-type a {
+      border-bottom: none;
+    }
+  }
+
+
+
+
+
+.sec{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    margin: auto;
+    background-color: beige;
+    max-width: 60%;
+    min-height: 80%;
 }
