--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+  background: fixed, url('https://i.imgur.com/S3iDsZH.png');
+  background-size: cover;
+}
 .navigation {
     display: flex;
     flex-flow: row wrap;
@@ -41,16 +45,13 @@
     }
   }
 
+  .sec{
+    background-color: #BAAA80;
+    box-shadow: 0px 0px 0px 3px #412624, 0px 0px 0px 10px #8b785b, 0px 0px 0px 15px #624e3c, 0px 0px 0px 18px #412624, 0px 3px 0px 18px rgb(0 0 0 / 19%);
+    margin-left: 25%;
+    margin-right: 25%;
+    padding: 20%;
+    padding-bottom: 80%;
+  }
 
 
-
-
-.sec{
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    margin: auto;
-    background-color: beige;
-    max-width: 60%;
-    min-height: 80%;
-}
