--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,35 @@
 body{
-  background: fixed, url('https://i.imgur.com/S3iDsZH.png');
+  background:url('https://i.imgur.com/S3iDsZH.png');
   background-size: cover;
+  background-attachment: fixed;
 }
+
+
 .navigation {
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-end;
+    justify-content:center;
     
     list-style: none;
-    margin: 0; 
-    background: deepskyblue;
+    margin: 10px; 
+    background-color: #BAAA80;
+    box-shadow: 0px 0px 0px 3px #412624, 0px 0px 0px 10px #8b785b, 0px 0px 0px 15px #624e3c, 0px 0px 0px 18px #412624, 0px 3px 0px 18px rgb(0 0 0 / 19%); 
   }
   
   .navigation a {
     text-decoration: none;
     display: block;
     padding: 1em;
-    color: white;
+    color: black;
+    transition: background-color 0.3s ease-out 0.03s;
+    transition: border-box 0.3s ease-out 0.03s;
+    border: solid transparent 2px;
   }
   
   .navigation a:hover {
-    background: #1565C0;
+    background: #8B785B ;
+    color: white;
+    border: solid black 2px;
   }
   
   @media all and (max-width: 800px) {
@@ -46,12 +55,15 @@ body{
   }
 
   .sec{
+    display: flex;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-block-end: 20px;
     background-color: #BAAA80;
     box-shadow: 0px 0px 0px 3px #412624, 0px 0px 0px 10px #8b785b, 0px 0px 0px 15px #624e3c, 0px 0px 0px 18px #412624, 0px 3px 0px 18px rgb(0 0 0 / 19%);
-    margin-left: 25%;
-    margin-right: 25%;
-    padding: 20%;
-    padding-bottom: 80%;
+    margin-top: 20%;
   }
 
-
+  .mysticsanct{
+    color: purple;
+  }
