--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ body{
   background-attachment: fixed;
 }
 
-
 .navigation {
     display: flex;
     flex-flow: row wrap;
@@ -19,6 +18,8 @@ body{
     margin-top: -2px;
     margin-bottom: -2px;
     text-decoration: none;
+    text-transform: uppercase;  
+    font-weight: bold;
     display: block;
     padding: 1em;
     color: black;
@@ -56,15 +57,24 @@ body{
   }
 
   .sec{
-    display: flex;
     margin-left: 20%;
     margin-right: 20%;
-    margin-block-end: 20px;
+    padding-bottom: 50%;
+    margin-top: 120px;
     background-color: #BAAA80;
     box-shadow: 0px 0px 0px 3px #412624, 0px 0px 0px 10px #8b785b, 0px 0px 0px 15px #624e3c, 0px 0px 0px 18px #412624, 0px 3px 0px 18px rgb(0 0 0 / 19%);
-    margin-top: 20%;
   }
 
   .mysticsanct{
     color: purple;
+  }
+
+  h1{
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  p{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
   }
